# books-library-restyle

./: .gitignore  .yml file  README.md  READMI.md  parse.py  pyproject.toml  render_website.py  requirements.txt  setup.cfg  template.html
pages/: index1.html  index10.html  index11.html  index12.html  index13.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html
parser/: parse_tululu_book.py  parse_tululu_category.py
