[tool.poetry]
name = "books-library-restyle"
version = "0.1.0"
description = "Parse book library."
authors = ["alpden550 <alpden550@gmail.com>"]
packages = [
    { include = "parser" },
  ]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
BeautifulSoup4 = "^4.8.2"
lxml = "^4.4.2"
pathvalidate = "^1.0.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.4.4"
black = "^19.10b0"
wemake-python-styleguide = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
